feat: add file preview
